--- a/websites/static/css/common.css
+++ b/websites/static/css/common.css
@@ -1590,6 +1590,7 @@ input:checked + .slider:before {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	line-height: normal;
 }
 
 .dialog-overlay-blurred {
